classDiagram

    class Game {
        -players: Player[]
        -deck: DeckOfCards
        +__construct()
        +setDeck(DeckOfCards)
        +getDeck(): DeckOfCards
        +drawCards(int): array
        +deal(Player, int)
        +addPlayer(string, string, string)
        +getPlayers(): Player[]
        +resetPlayers()
        +__toArray(): array
        #initializeGame()
    }    

    class DeckOfCards {
        -cards: Card[]
        #createDeck()
        +getCards(): Card[]
        +getCopySortedCards(): Card[]
        +addCard(Card)
        +drawCard(): Card
        +shuffleDeck()
        +countCards(): int
        +isEmpty(): bool
        +resetDeck()
        +__toArray(): array
        +getAsArray(): array[]
    }

    class Player {
        -id: string
        -name: string
        -type: string
        -hand: CardHand
        +__construct(string, string, string)
        +addCardToHand(Card)
        +playCard(Card): Card
        +playAllCards(): Card[]
        +getName(): string
        +getId(): string
        +getHand(): Card[]
        +getPlayerType(): string
        +__toArray(): array
        +clearHand()
    }

    class CardHand {
        -cards: Card[]
        +addCard(Card)
        +takeCard(Card): Card
        +getCards(): Card[]
        +__toArray(): array
    }
    class Card {
        -value: int
        -suit: string
        -$validValues: int[]
        -$validSuits: string[]
        +__construct(int, string)
        +getValue(): int
        +getSuit(): string
        +getCard(): array
        +getAsString(): string
        +__toString(): string
    }
    class CardGraphic {
        -unicodeCards: array
        +getGraphicForCollection(iterable): array
        +getGraphic(Card): string
    }
    class BasicGame {
        #initializeGame(int)
    }
    class FrenchDeckNoJoker {
        +__construct()
        #createDeck()
    }
    Game <|-- BasicGame
    Game *-- Player
    Game *-- DeckOfCards
    DeckOfCards <|-- FrenchDeckNoJoker
    DeckOfCards *-- Card
    Player *-- CardHand
    CardHand *-- Card
    CardGraphic ..> Card
